--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,18 @@ venusian==1.0
 WebOb==1.6.1
 zope.deprecation==4.1.2
 zope.interface==4.3.1
+alembic==0.8.7
+Jinja2==2.8
+Mako==1.0.4
+MarkupSafe==0.23
+psycopg2==2.6.2
+Pygments==2.1.3
+pyramid-debugtoolbar==3.0.4
+pyramid-jinja2==2.6.2
+pyramid-mako==1.0.2
+pyramid-tm==0.12.1
+python-editor==1.0.1
+SQLAlchemy==1.1.0b3
+transaction==1.6.1
+waitress==1.0.0
+zope.sqlalchemy==0.7.7
