--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,9 @@ SQLAlchemy==1.1.0b3
 transaction==1.6.1
 waitress==1.0.0
 zope.sqlalchemy==0.7.7
+flake8==3.0.4
+mccabe==0.5.2
+nose==1.3.7
+pycodestyle==2.0.0
+pycountry==1.20
+pyflakes==1.2.3
