--- a/requirements.txt
+++ b/requirements.txt
@@ -27,3 +27,17 @@ nose==1.3.7
 pycodestyle==2.0.0
 pycountry==1.20
 pyflakes==1.2.3
+alabaster==0.7.9
+Babel==2.3.4
+beautifulsoup4==4.5.1
+characteristic==14.3.0
+configparser==3.5.0
+docutils==0.12
+imagesize==0.7.1
+montague==0.2.1
+pytz==2016.6.1
+six==1.10.0
+snowballstemmer==1.2.1
+sphinxcontrib-httpdomain==1.5.0
+Unidecode==0.4.19
+WebTest==2.0.23
