Add heroku db creds

--- a/production.ini
+++ b/production.ini
@@ -12,7 +12,7 @@ pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 
-sqlalchemy.url = sqlite:///%(here)s/who_data.sqlite
+sqlalchemy.url = postgresql://exhkapofzkyaic:LLLQYphEF6SCPsySSJrjTwnsiS@ec2-54-225-72-148.compute-1.amazonaws.com:5432/dba08b957n7186
 
 [server:main]
 use = egg:waitress#main
