Make url_prefix a config option

--- a/development.ini
+++ b/development.ini
@@ -3,6 +3,7 @@
 # http://docs.pylonsproject.org/projects/pyramid/en/1.7-branch/narr/environment.html
 ###
 
+
 [app:main]
 use = egg:who_data
 
@@ -19,6 +20,8 @@ sqlalchemy.url = postgresql://localhost/who
 # By default, the toolbar only appears for clients from IP addresses
 # '127.0.0.1' and '::1'.
 # debugtoolbar.hosts = 127.0.0.1 ::1
+
+url_prefix = who-data
 
 ###
 # wsgi server configuration
